@@ -1,3 +1,9 @@
+2018-03-21  Martin Sebor  <msebor@redhat.com>
+
+	PR c++/84850
+	* g++.dg/Wclass-memaccess-3.C: New test.
+	* g++.dg/Wclass-memaccess-4.C: New test.
+
 2018-03-21  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/84892
