@@ -1,3 +1,10 @@
+2018-03-21  Martin Sebor  <msebor@redhat.com>
+
+	PR c++/84850
+	* call.c (first_non_public_field): New template and function.
+	(first_non_trivial_field): New function.
+	(maybe_warn_class_memaccess): Call them.
+
 2018-03-21  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/84892
